--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,32 @@
 #logo {
+    margin-left: 15%;
     margin-top: 0px;
     padding: 0, 0, 0, 0;
-    width: 100px;
+    width: 150px;
     display: inline-block;
 }
+
+html, body { scroll-behavior:smooth; }
 
 body {
     background-size: cover;
     background: url(pic/background1.jpg) no-repeat center center fixed;
 }
 
-.introduction{
+.introduction {
     line-height: 1%;
-    font-family: Arial, Helvetica, sans-serif;
-    color: lightgray;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
     text-align: center;
     font-size: 15px;
-    font-weight:bold;
 }
 
 a:visited{
-    color: lightgray;
+    color: white;
 }
 
 a:link{
-    color: lightgray;
+    color: white;
 }
 
 li {
@@ -36,11 +38,11 @@ li {
 
 
 #navLink{
-    font-size:20px;
-    margin-top: 4%;
-    float:right;
-    font-family: Arial, Helvetica, sans-serif;
-    color: lightgray;
+    float: right;
+    margin-top: 2%;
+    margin-right: 10%;
+    font-size:17px;
+    color: white;
     display: inline-block;
 }
 
@@ -60,7 +62,7 @@ li {
     background: null;
 }
 #name {
-    margin-top: 8%;
+    margin-top: 5%;
     color: white;
     text-align: center;
     font-size: 100px;
@@ -70,18 +72,56 @@ li {
 .searchingWindow {
     text-align: center;
     width: 50%;
-    height: calc(2.25rem + 2px);
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
     color: #495057;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 5rem;
-    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .searchingBtn {
     text-align: center;
+}
+
+.results {
+    background-color: #495057;
+    text-align: center;
+    padding-top: 1%;
+    margin-left: 1%;
+    margin-top: 5%;
+    color:white;
+    display: inline-block;
+    width: 300px;
+    border-radius: 1rem;
+    transition:1s;
+
+}
+
+#blockCase{
+    margin-bottom:15%;
+}
+
+.fa{
+    margin-left: 30px;
+}
+
+button {
+    margin-bottom: 30px;
+}
+
+.lAlb {
+    width: 60px;
+}
+
+.infoLyrics {
+    text-align: right;
+}
+
+#lyrics {
+    margin: 0px 30px 75px 30px;
 }
