--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ li {
     background-color: #495057;
     text-align: center;
     padding-top: 1%;
-    margin-left: 1%;
+    margin-left: .9%;
     margin-top: 5%;
     color:white;
     display: inline-block;
